--- a/src/concept/index.html
+++ b/src/concept/index.html
@@ -57,7 +57,7 @@
             <div class="left-wrap">
               <div class="profile">
                 <div>
-                  
+                  <img src="/assets/images/concept/profile@2x.webp" alt="コンセプト" loading="lazy"/>
                 </div>
               </div>
             </div>
@@ -177,9 +177,11 @@
             <a href="">
               <img src="/assets/images/icon-youtube@2x.webp" alt="YouTube"/>
             </a>
+            <!--
             <a href="">
               <img src="/assets/images/icon-x@2x.webp" alt="X"/>
             </a>
+            -->
           </div>
         </div>
       </nav>
