--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <div class="wrap">
         <h1 title="SYUJO_SIDE">
           <a href="/">
-            <img src="/assets/images/logo-w@2x.webp" alt="SYUJO_SIDE"/>
+            <img src="/assets/images/logo-w@2x.webp" alt="SYUJO_SIDE" class="reverse"/>
           </a>
         </h1>
         <div class="social-icons">
@@ -45,7 +45,32 @@
     <main>
       <!-- Hero -->
       <section id="hero">
-        <img src="/assets/images/home/hero@2x.webp" alt="全てを救う為、今、できる事の全てを" loading="lazy"/>
+        <div class="embla-wrap">
+          <div class="embla">
+            <div class="embla__viewport">
+              <div class="embla__container">
+                <div class="embla__slide">
+                  <img src="/assets/images/home/hero01@2x.webp" alt="" loading="lazy"/>
+                </div>
+                <div class="embla__slide">
+                  <img src="/assets/images/home/hero02@2x.webp" alt="" loading="lazy"/>
+                </div>
+                <div class="embla__slide">
+                  <img src="/assets/images/home/hero03@2x.webp" alt="" loading="lazy"/>
+                </div>
+                <div class="embla__slide">
+                  <img src="/assets/images/home/hero04@2x.webp" alt="" loading="lazy"/>
+                </div>
+                <div class="embla__slide">
+                  <img src="/assets/images/home/hero05@2x.webp" alt="" loading="lazy"/>
+                </div>
+                <div class="embla__slide">
+                  <img src="/assets/images/home/hero06@2x.webp" alt="" loading="lazy"/>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="saying">
           <p>
             <span>全てを救う為、</span>
@@ -446,7 +471,7 @@
               <a href="/column/">COLUMN</a>
               <a href="/contact/">CONTACT</a>
               <a href="#company">COMPANY</a>
-              <a href="https://google.com" target="_blank" rel="noopener noreferrer">STORE</a>
+              <a href="https://syujyoside.official.ec/" target="_blank" rel="noopener noreferrer">STORE</a>
             </div>
           </nav><!-- Navigator -->
         </div>
@@ -500,22 +525,27 @@
             <a href="">
               <img src="/assets/images/icon-instagram@2x.webp" alt="Instagram" />
             </a>
+            <!--
             <a href="">
               <img src="/assets/images/icon-line@2x.webp" alt="LINE"/>
             </a>
+            -->
             <a href="">
               <img src="/assets/images/icon-youtube@2x.webp" alt="YouTube"/>
             </a>
+            <!--
             <a href="">
               <img src="/assets/images/icon-x@2x.webp" alt="X"/>
             </a>
+            -->
           </div>
         </div>
       </nav>
     </div>
-    
+    <p ckass="hidden invert"></p>
     <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
     <script src="https://unpkg.com/embla-carousel-autoplay/embla-carousel-autoplay.umd.js"></script>
+    <script src="https://unpkg.com/embla-carousel-fade/embla-carousel-fade.umd.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/motion@11.11.13/dist/motion.js"></script>
     <script src="/assets/scripts/common.js"></script>
     <script src="/assets/scripts/home.js"></script>
